<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">Pedometer</string>
    <string name="splash_screen">Splash screen</string>
    <string name="goal">Goal</string>
    <string name="step_size">Step size</string>
    <string name="height_size">Height</string>
    <string name="weight_size">Weight</string>
    <string name="about">About</string>
    <string name="account">Account</string>
    <string name="goal_summary">Current goal: %,d steps</string>
    <string name="step_size_summary">Current step size: %1$.2f %2$s</string>
    <string name="height_size_summary">Current height: %1$.2f %2$s</string>
    <string name="weight_size_summary">Current weight: %1$.2f %2$s</string>
    <string name="sign_in">Sign in with your Google account to use the Achievements and Leaderboards features</string>
    <string name="signed_in">Signed in as %s</string>
    <string name="export_summary">Save your data in a .csv file</string>
    <string name="export_title">Export/Backup</string>
    <string name="import_summary">Imports previously saved data</string>
    <string name="import_title">Import/Restore</string>
    <string name="notification">Show notification</string>
    <string name="set_goal">Set goal</string>
    <string name="set_step_size">Set step size</string>
    <string name="set_height_size">Set height</string>
    <string name="set_weight_size">Set weight</string>
    <string name="sign_out">Sign out</string>
    <string name="file_cant_read">Error: %s can not be read</string>
    <string name="error_file">Error accessing the file: %s</string>
    <string name="error_external_storage_not_available">Error: External storage not available</string>
    <string name="data_saved">Data saved in %s</string>
    <string name="entries_imported">%d entries imported</string>
    <string name="entries_ignored">%d entries were ignored as they did not contain valid data</string>
    <string name="entries_overwritten">%d entries were overwritten with imported data</string>
    <string name="sign_in_necessary">Sign in necessary</string>
    <string name="please_sign_in_with_your_google_account">Please sign in with your Google+ account to use this feature.</string>
    <string name="steps">steps</string>
    <string name="text_color">Text color:</string>
    <string name="background_color">Background color:</string>
    <string name="settings">Settings</string>
    <string name="achievements">Achievements</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="statistics">Statistics</string>
    <string name="faq">FAQ</string>
    <string name="goal_reached_notification">Goal reached! %s steps and counting</string>
    <string name="notification_text">%s steps to go</string>
    <string name="total">Total</string>
    <string name="notification_title">Pedometer is counting</string>
    <string name="your_progress_will_be_shown_here_soon">Your progress will be shown here soon</string>
    <string name="average">Average</string>
    <string name="record">Record</string>
    <string name="total_last_7_days">Total last 7 days</string>
    <string name="average_last_7_days">Average last 7 days</string>
    <string name="total_this_month">Total this month</string>
    <string name="average_this_month">Average this month</string>
    <string name="file_already_exists">File already exists. Are you sure you want to overwrite it?</string>
    <string name="about_text_links">This app was created by Thomas Hoffmann (<a href="https://www.j4velin.de">www.j4velin.de</a>) and uses <a href="https://github.com/blackfizz/EazeGraph">EazeGraph</a> by Paul Cech and <a href="https://github.com/attenzione/android-ColorPickerPreference">ColorPickerPreference</a> by Sergey Margaritov.\n\nPedometer is open source! Get the code and the full list of contributors from <a href="https://github.com/j4velin/Pedometer">GitHub</a>.\n\n</string>
    <string name="about_app_version">App version: %s</string>
    <string name="since">Since %s</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="close">close</string>
    <string name="no_split_active">No split counter active. Click start to count the steps from now on</string>
    <string name="split_count">Count</string>
    <string name="step_history">History</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="ispaused">Pedometer is paused</string>
    <string name="pause_on_power_title">Pause while charging</string>
    <string name="pause_on_power_summary">Pause Pedometer while device is charging</string>
    <string name="no_sensor">Sensor not found</string>
    <string name="no_sensor_explain">This app requires a dedicated hardware step sensor - which your device does not have. This app won\'t run on your device.</string>
    <string name="permission_external_storage">No permission to access external storage</string>
    <string name="testData">testData</string>

    <!-- These were taken straight from the Google Play APK using reverse engineering tool apktool.jar !-->
    <string name="achievement_boots_made_for_walking">CgkI_pu14sQDEAIQAQ</string>
    <string name="achievement_boots_made_for_walking_ii">CgkI_pu14sQDEAIQBw</string>
    <string name="achievement_boots_made_for_walking_iii">CgkI_pu14sQDEAIQCA</string>
    <string name="achievement_boots_made_for_walking_iv">CgkI_pu14sQDEAIQEg</string>
    <string name="achievement_boots_made_for_walking_v">CgkI_pu14sQDEAIQEw</string>
    <string name="achievement_continual_i">CgkI_pu14sQDEAIQGw</string>
    <string name="achievement_continual_ii">CgkI_pu14sQDEAIQHA</string>
    <string name="achievement_continual_iii">CgkI_pu14sQDEAIQHQ</string>
    <string name="achievement_marathon">CgkI_pu14sQDEAIQAw</string>
    <string name="achievement_marathon_ii">CgkI_pu14sQDEAIQCw</string>
    <string name="achievement_marathon_iii">CgkI_pu14sQDEAIQDA</string>
    <string name="achievement_marathon_iv">CgkI_pu14sQDEAIQFw</string>
    <string name="achievement_marathon_v">CgkI_pu14sQDEAIQGA</string>
    <string name="achievement_stamina">CgkI_pu14sQDEAIQAg</string>
    <string name="achievement_stamina_ii">CgkI_pu14sQDEAIQCQ</string>
    <string name="achievement_stamina_iii">CgkI_pu14sQDEAIQCg</string>
    <string name="achievement_stamina_iv">CgkI_pu14sQDEAIQFA</string>
    <string name="achievement_stamina_v">CgkI_pu14sQDEAIQFQ</string>
    <string name="achievement_stamina_vi">CgkI_pu14sQDEAIQFg</string>
    <string name="leaderboard_highest_average">CgkI_pu14sQDEAIQHg</string>
    <string name="leaderboard_most_steps_walked">CgkI_pu14sQDEAIQGQ</string>
    <string name="leaderboard_most_steps_walked_in_one_day">CgkI_pu14sQDEAIQGg</string>

    <!-- This might be somewhat unethical, but using the same app_id as the
        original allows
        our version of the app to connect and use j4velin's preconfigured
        Google Play Achievements !-->
    <string name="app_id">121539218942</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>

</resources>
