<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/step_history"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.j4velin.pedometer.ui.Fragment_StepHistory">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tab_and_list"
            android:orientation="vertical">

            <android.support.design.widget.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day" />

                <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/week" />

                <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/month" />
            </android.support.design.widget.TabLayout>

            <ListView
                android:id="@+id/step_history_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    <com.github.clans.fab.FloatingActionMenu
        xmlns:fab="http://schemas.android.com/apk/res-auto"
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        fab:menu_icon="@drawable/ic_list_black_24dp"/>
</FrameLayout>

